--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,7 +1,10 @@
 {
   "compilerOptions": {
+    "baseUrl": ".", 
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": ["./src/*"] // 🔹 Asegura que la ruta es correcta
     }
-  }
+  },
+  "include": ["src"], // 🔹 Asegura que VS Code escanea `src`
+  "exclude": ["node_modules", ".next"]
 }
