--- a/package.json
+++ b/package.json
@@ -24,10 +24,15 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@eslint/js": "^9.20.0",
     "@types/node": "22.13.1",
     "@types/react": "19.0.8",
-    "eslint": "^9",
-    "eslint-config-next": "15.1.6",
+    "eslint": "^8.57.1",
+    "eslint-config-next": "^15.1.6",
+    "eslint-config-prettier": "^10.0.1",
+    "eslint-plugin-prettier": "^5.2.3",
+    "eslint-plugin-react": "^7.37.4",
+    "globals": "^15.15.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1"
   }
